Make buttongroup visible again - Fixing #13612 caused by #13543

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -7075,6 +7075,9 @@ ul.x-tab-strip-bottom {
   font: normal 11px "Helvetica Neue", Helvetica, Arial, Tahoma, sans-serif;
   line-height: 0; }
 
+.x-toolbar .x-btn-group-header {
+  line-height: 1; }
+
 .x-toolbar .x-btn-over em.x-btn-split,
 .x-toolbar .x-btn-click em.x-btn-split,
 .x-toolbar .x-btn-menu-active em.x-btn-split,
